<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoReport</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>

    <string name="main_app_name">GeoTracker</string>
    <string name="login_app_name">GeoTracker-Login</string>
    <string name="myacc_app_name">GeoTracker-MyAccount</string>
    <string name="register_app_name">GeoTracker-Register</string>
    <string name="registerterm_app_name">GeoTracker-TnC</string>
    <string name="forgotpass_app_name">GeoTracker-ForgotPass</string>
    <string name="mytraj_app_name">GeoTrackerMyTrajectory</string>

    <string name="label_geo">Geo Tracker</string>
    <string name="label_login">Login</string>
    <string name="label_next">Next</string>
    <string name="label_myacc">My Account</string>
    <string name="label_register">Register</string>
    <string name="label_email">Email</string>
    <string name="label_pass">Password</string>
    <string name="label_forgot">Forgot Your Password</string>
    <string name="label_reset">[Reset Password]</string>
    <string name="ihaveread">I accept the Terms and Conditions</string>

    <string name="terms">
        Ako ay may lobo\n
        Lumipad sa Langit\n
        Hindi ko na makita\n
        Pumutok na pala\n
        Sayang lang pera ko\n
        Pambili ng lobo\n
        Sa pagkain sana\n
        Nabusog pa ako\n
    </string>

    <string name="label_submit">Submit</string>
    <string name="label_recovpass">Recover Your Password</string>
    <string name="label_forgotexplain">Type in the email address you use for your account. Then we\'ll email a code to this address.</string>
    <string name="label_enteremail">Enter your email:</string>
    <string name="label_mytrajectory">My Trajectory</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_retrieve_location">RetrieveLocation</string>
    <string name="label_logout">Logout</string>
    <string name="label_findtraj">Find Trajectory</string>
    <string name="label_endate">End Date:</string>
    <string name="label_terms">Terms and Condition</string>
    <string name="title_activity_service_test">ServiceTestActivity</string>
    <string name="title_activity_maps_list_activitty">MapsListActivitty</string>
    <string name="label_conpass">Confirm Password</string>
    <string name="label_secQ">Secret Question</string>
    <string name="label_secA">Secret Answer</string>
    <string name="label_enddate">End Date:</string>
    <string name="label_startdate">Start Date:</string>
    <string name="label_endtime">End Time:</string>
    <string name="label_starttime">Start Time:</string>
    <string name="label_passsemi">Password:</string>
    <string name="label_testEmailName">Email Dude Again</string>
    <string name="label_findTrajectory">Find Trajectory</string>
    <string name="label_findTrajectoryp">Find\nTrajectory</string>
    <string name="label_Back">Back</string>
    <string name="label_showlist">Show List</string>
    <string name="label_timesemicolon">  Time:  </string>
    <string name="label_updatewebservice">Update Web Service</string>
    <string name="label_updatewebservicep">Update\nWeb Service</string>
    <string name="title_activity_user_pref">UserPrefActivity</string>
    <string name="label_settings">Settings</string>
    <string name="label_uploadInt">Upload Interval</string>
    <string name="label_sampleInt">Sample Interval</string>
    <string name="label_save">Save</string>
    <string name="label_pref">Preferences</string>
    <string name="label_startservice">Start Service</string>
    <string name="label_stopservice">Stop Service</string>
    <string name="label_confirmpass">Confirm Password</string>
    <string name="label_trackon">Track ON</string>
    <string name="label_termscond">Terms and Condition</string>
</resources>
