<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".KevinAccountActivity"
    android:background="@drawable/gradient_titan">

    <!--
    use this to keep the app from automatically focusing on the edit text (w/c opens the soft keyboard
    android:focusable="true"
    android:focusableInTouchMode="true"
    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_below="@+id/lbl_pref_title"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/btn_myacc_settings">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myacc_innerRelativeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_testEmailName"
                android:id="@+id/lbl_myacc_email"
                android:textSize="25sp"
                android:textColor="#FFFFFFFF"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lbl_myacc_email"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/myacc_layout_h"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:id="@+id/myacc_layout_v1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_startdate"
                        android:id="@+id/lbl_myacc_startdate"
                        android:textSize="18sp"
                        android:layout_marginTop="0dp"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="#ffE7A831"
                        android:layout_weight="0" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/txt_myacc_startDate"
                        android:background="@android:drawable/editbox_background_normal"
                        android:layout_marginTop="0dp"
                        android:gravity="center_vertical"
                        android:layout_weight="0"
                        android:inputType="none"
                        android:focusableInTouchMode="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_starttime"
                        android:id="@+id/textView"
                        android:textSize="18sp"
                        android:layout_marginTop="0dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="#ffE7A831"
                        android:layout_weight="0" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:ems="10"
                        android:id="@+id/txt_myacc_startTime"
                        android:layout_weight="0"
                        android:background="@android:drawable/editbox_background_normal"
                        android:focusableInTouchMode="false"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/myacc_layout_v2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_enddate"
                        android:id="@+id/lbl_myacc_endDate"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="#ffE7A831"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/txt_myacc_endDate"
                        android:background="@android:drawable/editbox_background_normal"
                        android:gravity="center_vertical"
                        android:inputType="none"
                        android:layout_weight="0"
                        android:focusableInTouchMode="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_endtime"
                        android:id="@+id/textView2"
                        android:textSize="18sp"
                        android:layout_marginTop="0dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="#ffE7A831"
                        android:layout_weight="0" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:ems="10"
                        android:id="@+id/txt_myacc_endTime"
                        android:layout_weight="0"
                        android:background="@android:drawable/editbox_background_normal"
                        android:focusableInTouchMode="false" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/myacc_layout_h"
                android:layout_alignRight="@+id/myacc_layout_h"
                android:layout_alignEnd="@+id/myacc_layout_h"
                android:layout_alignLeft="@+id/myacc_layout_h"
                android:layout_alignStart="@+id/myacc_layout_h"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_findTrajectoryp"
                    android:id="@+id/btn_myacc_trajetory"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:background="@drawable/button_2"
                    android:layout_margin="0dp"
                    android:layout_weight="0.45" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_updatewebservicep"
                    android:id="@+id/btn_myacc_manualUpload"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:background="@drawable/button_2"
                    android:layout_margin="0dp"
                    android:layout_weight="0.45" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/label_logout"
        android:id="@+id/btn_myacc_logout"
        android:theme="@style/Widget.AppCompat.Button.Small"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/button_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_myacc"
        android:id="@+id/lbl_pref_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:background="@drawable/shape_1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/label_pref"
        android:id="@+id/btn_myacc_settings"
        android:background="@drawable/button_2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:layout_above="@+id/btn_myacc_logout"
        android:layout_alignLeft="@+id/btn_myacc_logout"
        android:layout_alignStart="@+id/btn_myacc_logout"
        android:layout_alignRight="@+id/btn_myacc_logout"
        android:layout_alignEnd="@+id/btn_myacc_logout"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
