<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".KevinLoginActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_scrollView"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/login_innerRelativeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:id="@+id/lbl_login_email"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/lbl_login_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pass"
                android:id="@+id/lbl_login_pass"
                android:layout_marginTop="19dp"
                android:layout_below="@+id/txt_login_email"
                android:layout_alignLeft="@+id/lbl_login_email"
                android:layout_alignStart="@+id/lbl_login_email"
                android:textSize="18dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txt_login_pass"
                android:background="@android:drawable/editbox_background_normal"
                android:layout_below="@+id/lbl_login_pass"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/txt_login_email"
                android:background="@android:drawable/editbox_background"
                android:layout_below="@+id/lbl_login_email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_login"
                android:id="@+id/btn_login_login"
                android:layout_below="@+id/lbl_login_forgotPass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_login"
                android:id="@+id/lbl_login_title"
                android:gravity="center_horizontal"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/label_register"
                android:id="@+id/btn_login_register"
                android:textStyle="normal"
                android:textSize="14sp"
                android:layout_below="@+id/btn_login_login"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_alignRight="@+id/txt_login_pass"
                android:layout_alignEnd="@+id/txt_login_pass"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/label_forgot"
                android:id="@+id/lbl_login_forgotPass"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:textColor="#ff0010ff"
                android:layout_below="@+id/txt_login_pass"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
