<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context=".ForgotPasswordActivity"
    android:background="@drawable/gradient_titan">

    <TextView
        android:id="@+id/lbl_forgot_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/shape_1"
        android:gravity="center"
        android:text="@string/label_recovpass"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_forgot_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:fillViewport="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:id="@+id/lbl_forgot_enteremail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_enteremail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lbl_forgot_enteremail"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btn_forgot_submit"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_below="@+id/lbl_forgot_explain"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_2"
                android:text="@string/label_submit"
                android:textColor="#ffffffff"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_forgot_explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/txt_forgot_email"
                android:layout_alignLeft="@+id/txt_forgot_email"
                android:layout_alignRight="@+id/txt_forgot_email"
                android:layout_alignStart="@+id/txt_forgot_email"
                android:layout_below="@+id/txt_forgot_email"
                android:text="@string/label_forgotexplain"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>