<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".KevinLoginActivity"
    android:background="@drawable/gradient_titan">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_login_pass"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:password="false"
        android:layout_below="@+id/txt_login_email"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txt_login_email"
        android:background="@android:drawable/editbox_background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lbl_login_title"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_forgot"
        android:id="@+id/lbl_login_forgotPass"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="#E7A831"
        android:layout_below="@+id/txt_login_pass"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/label_geo"
        android:id="@+id/lbl_login_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#E7A831"
        android:gravity="center"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/label_login"
        android:id="@+id/btn_login_login"
        android:background="@drawable/button_1"
        android:textColor="#ffffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/lbl_login_forgotPass"
        android:layout_alignLeft="@+id/txt_login_pass"
        android:layout_alignStart="@+id/txt_login_pass"
        android:layout_alignRight="@+id/txt_login_pass"
        android:layout_alignEnd="@+id/txt_login_pass"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/label_register"
        android:id="@+id/btn_login_register"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#ffffffff"
        android:background="@drawable/button_2"
        android:layout_below="@+id/btn_login_login"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/btn_login_login"
        android:layout_alignEnd="@+id/btn_login_login"
        android:layout_alignLeft="@+id/btn_login_login"
        android:layout_alignStart="@+id/btn_login_login" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:adjustViewBounds="false"
        android:src="@drawable/gear"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
